--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,14 @@
 <li>
     <a href="/posts/<%= i %>"><%= posts[i].title %></a>
     <a href="/posts/<%= i %>/edit">[Edit]</a>
-    <!-- <form method="post" action="/posts/<%= i %>">
+    <form method="post" action="/posts/<%= i %>">
       <input type="submit" value="del">
-      <input type="hidden" name="?_method" value="delete">
+      <input type="hidden" name="_method" value="delete">
       <input type="hidden" name="id" value="<%= i %>">
-    </form> -->
-    <form method="post" action="/posts/<%= i %>?_method=delete">
-      <button type="submit">Delete</button>
     </form>
+    <!-- <form method="post" action="/posts/<%= i %>?_method=delete">
+      <button type="submit">Delete</button>
+    </form> -->
 </li>
 <% } %>
 </ul>
